--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
 install: pip install -r requirements-test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: coverage run --source affarigenerali runtests.py
+script: coverage run --source pympa_affarigenerali runtests.py
 
 # report coverage to coveralls.io
 after_success: coveralls
